# easyway-cargo

./: .gitignore  README.md  pyproject.toml
devops/: Dockerfile  docker-compose.yaml
src/: main.py  notify.py
src/database/: mongo_db.py
src/export/: google_sheets.py  parse_xlsx.py  sync_data.py  write_to_sheets.py
src/export/files/: google_credentials.json
